<resources>
    <string name="app_name">Quiz App Project</string>
    <string name="quest_header1">Question #1</string>
    <string name="quest_header2">Question #2</string>
    <string name="quest_header3">Question #3</string>
    <string name="quest_header4">Question #4</string>
    <string name="quest_header5">Question #5</string>
    <string name="quest_header6">Question #6</string>
    <string name="quest_header7">Question #7</string>
    <string name="question1">What are the names of 2 types of forced- a.k.a. boosted induction?</string>
    <string name="question2">What year was the Pontiac Firebird introduced?</string>
    <string name="question3">What kind of car is a Sleeper?</string>
    <string name="question4">Which of these classic year/model cars are commonly known as Shoeboxes?</string>
    <string name="question5">What Staging Tree light conditions show you are Deep Staged?</string>
    <string name="question6">Which 2 of these cars are popular to build into Drift Racers?</string>
    <string name="question7">Which 2 statements are true about Nitrous Oxide</string>
    <string name="answer1a">Twincharging</string>
    <string name="answer1b">Nitrous Oxide</string>
    <string name="answer1c">Turbocharging</string>
    <string name="answer1d">A Massive Hoodscoop</string>
    <string name="answer3a">A pristine car that spends most of it\'s life at shows or in it\'s garage</string>
    <string name="answer3b">An unassuming car that has an engine modified to hustle other racers that underestimate it</string>
    <string name="answer3c">A project racecar still under construction</string>
    <string name="answer4a">1955 Ford</string>
    <string name="answer4b">1957 Chevy Belair</string>
    <string name="answer4c">1973 Cuda</string>
    <string name="answer4d">1972 Fairlane</string>
    <string name="answer5a">Green Light Blinks Three Times</string>
    <string name="answer5b">Red Light is Lit</string>
    <string name="answer5c">Pre Stage Light is Off</string>
    <string name="answer5d">Yellow Stage Light is Lit</string>
    <string name="answer6a">2013 Mc Laren 12C</string>
    <string name="answer6b">1987 AE86 Bluebird</string>
    <string name="answer6c">1995 R33 Skyline</string>
    <string name="answer6d">Lamborghini Huracan</string>
    <string name="answer7a">It lowers the intake charge air temperature</string>
    <string name="answer7b">It is a bottled gas and works by pressurizing the intake air charge</string>
    <string name="answer7c">Because the kit is cheap you should jet it for over 150HP on your stock daily driver</string>
    <string name="answer7d">It is an oxidizer &amp; it intensifies &amp; accelerates combustion</string>
    <string name="score">Score Quiz</string>
    <string name="hint2">Type Answer For #2 Here</string>
    <string name="content_description_background">The twin turbos on a Porche 933 and polished engine dominate the view flanked by bright red air strakes with black louvers.</string>
    <string name="content_description_q1">People look on from the dragstrip bleachers as the rear slicks wrinkle under the torque of the green rat rod 1930\'s sedan\'s launch.</string>
    <string name="content_description_q2">A shiny red 1967 Firebird 400 sitting on a car show lawn next to a baby blue car.</string>
    <string name="content_description_q3">A dirty rusty looking engine bay reveals a beautiful shiny modified engine it is hiding</string>
    <string name="content_description_q4">A shiny waxed lime and black 1973 340 Cuda sitting in it\'s garage</string>
    <string name="content_description_q5">A purple 1969 Camaro does a wheelstand as it launches against a black and yellow railcar.</string>
    <string name="content_description_q6">A Charcoal GTR33 Skyline with wide tires and black wheels sits at the ready</string>
    <string name="content_description_q7">A Blue 2 pound NOS bottle sits attached to the side of a jade green motorcycle just below the black leather seat.</string>
    <string name="content_description_checkbutton">A glowing red oval neon button with yellow text that says Score Quiz</string>
</resources>
